# infra-home

./: .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  deploy-watch.sh
assets/glance/: user.css
compose/: caddy.yml  glance.yml  monitoring.yml  network.yml  pihole.yml
configs/caddy/: Caddyfile
configs/glance/: glance.yml
configs/monitoring/grafana/provisioning/dashboards/: adguard.json  dashboards.yml  pi-stats.json  speedtest.json
configs/monitoring/prometheus/: prometheus.yml
glance-custom-api/: .dockerignore  Dockerfile  generate_token.py  main.py  pyproject.toml
glance-custom-api/routes/: github.py  health.py  youtube.py
glance-custom-api/schemas/github/: custom_objects.py
glance-custom-api/schemas/youtube/: activities.py  commons.py  subscriptions.py  videos.py
